syntax = "proto3";
import "google/protobuf/timestamp.proto";

package assets;

message Medias {
    repeated Media medias = 1;
}

message Media {
    uint32 id = 1;
    google.protobuf.Timestamp date_created = 2;
    google.protobuf.Timestamp last_modified = 3;
    string url = 4;
    string description = 5;
    // FK Link (global ID) pointing back to any of the various models
    string fk_link = 6;
    uint32 user = 7;
    string added_by = 8;
}
